fix: fix layout problems

--- a/src/components/Categories/Categories.module.scss
+++ b/src/components/Categories/Categories.module.scss
@@ -17,13 +17,14 @@ ul {
   margin: 0 auto;
   height: 100%;
   align-items: center;
-  overflow: scroll;
   gap: 10px;
+  overflow-x: scroll;
 }
 li {
-  display: flex;
-  flex-direction: row;
-  align-self: center;
+  display: block;
+  flex-shrink: 0;
+  text-align: center;
+  line-height: 40px;
   width: 140px;
   padding: 5px;
   height: 40px;
@@ -32,8 +33,6 @@ li {
   font-size: 18px;
   border: 2px solid $highlights;
   border-radius: 5px;
-  justify-content: space-evenly;
-  align-items: center;
   transition: ease-in-out 0.3s;
   &:hover {
     cursor: pointer;
