--- a/src/components/ItemInCounter/ItemInCounter.module.scss
+++ b/src/components/ItemInCounter/ItemInCounter.module.scss
@@ -1,20 +1,48 @@
 @import "../../variables.scss";
 
 .wrapper {
-  width: 98%;
+  width: 95%;
+  padding: 7px;
   background-color: $background;
-  height: 50px;
+  height: 60px;
   margin: 0 auto;
   border-radius: 5px;
   margin-top: 5px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  gap: 10px;
+  align-items: center;
 }
 .quantity {
   display: flex;
   flex-direction: row;
+  width: 80px;
+  height: 35px;
+  justify-content: space-between;
+  background-color: $white;
+  border-radius: 5px;
+  padding: 5px;
+  align-items: center;
 }
+
+.number,
+.name,
+.price,
+.subtotal {
+  font-size: 18px;
+  font-weight: 400;
+}
+.name {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 110px;
+  padding: 5px;
+  background-color: $white;
+  border-radius: 5px;
+  height: 35px;
+  line-height: 35px;
+}
+
 .plus,
 .minus {
   all: unset;
@@ -22,17 +50,20 @@
   border: 2px solid $green;
   color: $green;
   background-color: $white;
-  width: 25px;
-  height: 25px;
+  width: 22px;
+  height: 22px;
   text-align: center;
+  line-height: 22px;
   transition: ease-in-out 0.3s;
   font-size: 20px;
   font-weight: 400;
+  border-radius: 3px;
   &:hover {
     color: $white;
     background-color: $green;
   }
   &:disabled {
+    cursor: auto;
     color: rgb(164, 164, 164);
     background-color: $white;
     border: 2px solid rgb(164, 164, 164);
